--- a/Vanlife/src/index.css
+++ b/Vanlife/src/index.css
@@ -9,7 +9,19 @@
   .bgprimary{
     @apply bg-[#FFF7ED]
   }
+  .btn{
+    @apply px-[26px] py-[7px] rounded-md text-[16px] leading-[24px] font-[500] capitalize
+}
+  .category-btn{
+    @apply px-[20px] py-[5px] rounded-md text-[14px] leading-[24px] font-[500] capitalize h-10 bg-[#FFEAD0] 
+}
   .inter{
     @apply font-[Inter]
+  }
+  .active{
+    @apply underline decoration-solid decoration-red-900 scale-125
+  }
+  .hover{
+    @apply hover:scale-125 ease-in duration-75 font-bold
   }
 }
